--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "expo-constants": "~17.1.4",
     "expo-font": "~13.3.0",
     "expo-haptics": "~14.1.4",
+    "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "~14.1.4",
     "expo-linking": "~7.1.4",
     "expo-router": "~5.0.6",
     "expo-splash-screen": "~0.30.8",
@@ -39,15 +41,14 @@
     "react-native": "0.79.2",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
-    "zustand": "^5.0.3",
-    "expo-image-picker": "~16.1.4",
-    "expo-linear-gradient": "~14.1.4"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
