feat: enhance match screen with animated user bubbles, integrate blur effects, and update layout for improved user experience

--- a/app.json
+++ b/app.json
@@ -9,7 +9,10 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "entitlements": {
+        "com.apple.developer.applesignin": ["Default"]
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -33,13 +36,13 @@
           "backgroundColor": "#ffffff"
         }
       ],
-      "expo-font"
+      "expo-font",
+      "expo-web-browser"
     ],
     "experiments": {
       "typedRoutes": true
     },
     "splash": {
-      // 여기에 스플래시 화면 설정을 추가하거나 수정합니다.
       "image": "./assets/images/bg.png",
       "resizeMode": "cover",
       "backgroundColor": "#000000"
