--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@react-navigation/native": "^7.0.14",
     "@supabase/supabase-js": "^2.51.0",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
+    "core-js": "^3.44.0",
     "expo": "53.0.9",
+    "expo-auth-session": "~6.2.1",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.4",
     "expo-font": "~13.3.0",
@@ -50,7 +52,8 @@
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
     "zustand": "^5.0.3",
-    "expo-auth-session": "~6.2.1"
+    "expo-apple-authentication": "~7.2.4",
+    "expo-dev-client": "~5.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
