--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "react-native-screens": "~4.10.0",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "expo-camera": "~16.1.10"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
