--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
     "zustand": "^5.0.3",
-    "expo-camera": "~16.1.10"
+    "expo-camera": "~16.1.10",
+    "@react-native-community/netinfo": "11.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
