feat: update profile screen with enhanced data fetching, integrate new bubble creation logic, and improve image handling with signed URLs

--- a/app.json
+++ b/app.json
@@ -13,10 +13,7 @@
       "bundleIdentifier": "com.playlounge.bubble",
       "usesAppleSignIn": true,
       "entitlements": {
-        "com.apple.developer.applesignin": [
-          "Default",
-          "Default"
-        ]
+        "com.apple.developer.applesignin": ["Default", "Default"]
       },
       "associatedDomains": [
         "applinks:your-project.supabase.co",
