--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@expo-google-fonts/literata": "^0.3.0",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/netinfo": "11.4.1",
+    "@react-native-google-signin/google-signin": "^15.0.0",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
@@ -29,6 +31,7 @@
     "expo-apple-authentication": "~7.2.4",
     "expo-auth-session": "~6.2.1",
     "expo-blur": "~14.1.4",
+    "expo-camera": "~16.1.10",
     "expo-constants": "~17.1.4",
     "expo-dev-client": "~5.2.4",
     "expo-font": "~13.3.0",
@@ -54,9 +57,7 @@
     "react-native-screens": "~4.10.0",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
-    "zustand": "^5.0.3",
-    "expo-camera": "~16.1.10",
-    "@react-native-community/netinfo": "11.4.1"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
