--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "base64-arraybuffer": "^1.0.2",
     "core-js": "^3.44.0",
+    "dayjs": "^1.11.13",
     "expo": "53.0.9",
     "expo-apple-authentication": "~7.2.4",
     "expo-auth-session": "~6.2.1",
@@ -51,6 +52,7 @@
     "react-native": "0.79.2",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-gifted-chat": "^2.8.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "~3.17.4",
