--- a/package.json
+++ b/package.json
@@ -80,7 +80,9 @@
     "jest": "^29.2.1",
     "jest-expo": "~53.0.5",
     "react-test-renderer": "19.0.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "eslint": "^9.0.0",
+    "eslint-config-expo": "~9.2.0"
   },
   "overrides": {
     "react": "19.0.0",
