--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "core-js": "^3.44.0",
     "dayjs": "^1.11.13",
     "dotenv": "^17.2.1",
-    "expo": "53.0.9",
+    "expo": "^53.0.9",
     "expo-apple-authentication": "~7.2.4",
     "expo-auth-session": "~6.2.1",
     "expo-blur": "~14.1.4",
@@ -77,12 +77,12 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~19.0.0",
     "@types/react-test-renderer": "^19.0.0",
+    "eslint": "^9.0.0",
+    "eslint-config-expo": "~9.2.0",
     "jest": "^29.2.1",
     "jest-expo": "~53.0.5",
     "react-test-renderer": "19.0.0",
-    "typescript": "^5.3.3",
-    "eslint": "^9.0.0",
-    "eslint-config-expo": "~9.2.0"
+    "typescript": "^5.3.3"
   },
   "overrides": {
     "react": "19.0.0",
