fix in matchmaking screen, invitation button
Session Summary: 2 Major Fixes

  1. Fixed Invitation UI Not Updating (✅ Completed)

  Problem: Invitations were sent to database correctly, but the "+" icon
  didn't change to blue checkmark in the UI.

  Root Cause: Frontend had overly strict validation - only updated UI if
  data.success && data.verification_status === 'invited'

  Fix: Made UI update logic more permissive - now updates if data.success
  || data.already_exists

  File: app/search/index.tsx (lines 286-309)

  ---
  2. Fixed "Loading..." After Single Swipe (✅ Completed)

  Problem: After swiping once, app showed "Loading..." instead of the next
   matching group, even though multiple groups existed in database.

  Root Cause: currentGroupIndex went out of bounds after group removal
  - Had 2 groups: [GroupA, GroupB] with currentGroupIndex = 1
  - Swiped GroupB → Array became [GroupA] (length 1)
  - But currentGroupIndex stayed at 1 → matchingGroups[1] = undefined

  Fix: Added safety checks to reset index when out of bounds

--- a/app.json
+++ b/app.json
@@ -13,7 +13,10 @@
       "bundleIdentifier": "com.playlounge.bubble",
       "usesAppleSignIn": true,
       "entitlements": {
-        "com.apple.developer.applesignin": ["Default", "Default"]
+        "com.apple.developer.applesignin": [
+          "Default",
+          "Default"
+        ]
       },
       "associatedDomains": [
         "applinks:your-project.supabase.co",
@@ -62,8 +65,9 @@
     "extra": {
       "router": {},
       "eas": {
-        "projectId": "da919264-4069-4ddf-b59d-00af9bfb0a41"
+        "projectId": "48ecd53a-6924-4352-aed2-0dd3e1e01dfb"
       }
-    }
+    },
+    "owner": "playlounge"
   }
 }
