--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
     "zustand": "^5.0.3",
-    "expo-clipboard": "~7.1.5"
+    "expo-clipboard": "~7.1.5",
+    "expo-location": "~18.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
