--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "expo-auth-session": "~6.2.1",
     "expo-blur": "~14.1.4",
     "expo-camera": "~16.1.10",
-    "expo-constants": "~17.1.4",
+    "expo-constants": "~17.1.7",
     "expo-dev-client": "~5.2.4",
     "expo-font": "~13.3.0",
     "expo-haptics": "~14.1.4",
@@ -70,7 +70,9 @@
     "react-native-screens": "~4.10.0",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "expo-notifications": "~0.31.4",
+    "expo-device": "~7.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
