--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint",
@@ -39,18 +39,22 @@
     "core-js": "^3.44.0",
     "dayjs": "^1.11.13",
     "dotenv": "^17.2.1",
-    "expo": "^53.0.9",
+    "expo": "^53.0.23",
     "expo-apple-authentication": "~7.2.4",
     "expo-auth-session": "~6.2.1",
     "expo-blur": "~14.1.4",
     "expo-camera": "~16.1.10",
+    "expo-clipboard": "~7.1.5",
     "expo-constants": "~17.1.7",
     "expo-dev-client": "~5.2.4",
+    "expo-device": "~7.1.4",
     "expo-font": "~13.3.0",
     "expo-haptics": "~14.1.4",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.4",
     "expo-linking": "~7.1.4",
+    "expo-location": "~18.1.6",
+    "expo-notifications": "~0.31.4",
     "expo-router": "~5.0.6",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
@@ -73,11 +77,7 @@
     "react-native-svg": "^15.12.1",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
-    "zustand": "^5.0.3",
-    "expo-notifications": "~0.31.4",
-    "expo-device": "~7.1.4",
-    "expo-clipboard": "~7.1.5",
-    "expo-location": "~18.1.6"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
